--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - jax >=0.1.55
     - jaxlib >=0.1.37
     - numpy >=1.18.0
+    - typing_extensions ~=3.10
 
 test:
   imports:
