--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,13 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.8
+    - flit_core >=3.2,<4
     - pip
-    - flit_core
   run:
-    - python >=3.6
+    - python >=3.8
     - absl-py >=0.7.1
-    - chex >=0.0.4
+    - chex >=0.1.5
     - jax >=0.1.55
     - jaxlib >=0.1.37
     - numpy >=1.18.0
