--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "optax" %}
 {% set version = "0.2.4" %}
-
+{% set python_min = "3.9" %}
 
 package:
   name: {{ name|lower }}
@@ -17,11 +17,11 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python {{ python_min }}
     - flit-core >=3.2,<4
     - pip
   run:
-    - python >=3.9
+    - python >={{ python_min }}
     - absl-py >=0.7.1
     - chex >=0.1.86
     - jax >=0.4.27
