Add `setuptools` in test requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,6 +37,8 @@ test:
     - pip check
   requires:
     - pip
+    # Required by chex until it gets fixed upstream
+    - setuptools
 
 about:
   home: https://github.com/deepmind/optax
